Add SonarQube workflow and refactor for cleaner code analysis